Fixed the PLC Syndie route so it actually works.
Made the syndie route more obvious to enter.

Various PLC fixes.

--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -281,8 +281,8 @@ plcommon.12.t:0 "Nationalists takeover in the Commonwealth!"
 plcommon.12.d:0 "Today the rightful King of the Commonwealth of Poland and Lithuania, Mindaugas III, was captured by Adam Doboszynski and his Polish nationalist henchmen. Doboszynski officially withdrew the Commonwealth from Mitteleuropa and declared that the Commonwealth is now free from 'German domination.' We need to respond to this crisis immediately, so what should we do?"
 plcommon.12.a:0 "There is nothing we can do..."
 plcommon.12.b:0 "Such betrayal will not be tolerated!"
-plcommon.13.t:0 "The Sejim Elections"
-plcommon.13.d:0 "Under our constitution, elections must be held every four years. There are four main political parties that have a chance of winning at the ballot box, who will it be?"
+plcommon.13.t:0 "The First Sejm Election"
+plcommon.13.d:0 "Excited voters from across the Commonwealth have gathered in the cities on this historic day to cast their votes in the first combined Polish-Lithuanian election in the new Commonwealth. The king's decree that the people would be allowed to vote has galvanized political movements across the nation, and many different political movements seem capable of sweeping the ballots. \n\nEven, concerningly, some Populist and Syndicalist movements, whose victory could spell disaster for the fledgling Commonwealth. Which party will come out on top?"
 plcommon.13.a:0 "The Patriotic Party"
 plcommon.13.b:0 "The People's Coalition"
 plcommon.13.c:0 "The National-Radical Party of Poland"
@@ -392,8 +392,8 @@ plcommon.36.a:0 "Proceed with the operation!"
 plcommon.36.b:0 "We don't need that"
 plcommon.37.t:0 "Foreign policy"
 plcommon.37.d:0 "With the Commonwealth finally free from capitalist oppression we can now freely decide our stance towards the international community. While many are arguing for an immediate alliance with other Syndicalist nations, it might be wise to remain neutral to rebuild our country."
-plcommon.37.a:0 "We must join arms with France"
-plcommon.37.b:0 "Isolationism, we must organise our country"
+plcommon.37.a:0 "Isolationism, we must organise our country."
+plcommon.37.b:0 "We must be proactive with the revolution!"
 plcommon.38.t:0 "Commonwealth wants to join the Syndicalists"
 plcommon.38.d:0 "The Government of the Commonwealth has announced that they want to join the Syndicalist bloc. It's not a sudden move because pro-Syndicalist policy is popular in many circles including the government and army. Do we want Polish workers and peasants joining the crusade against bloodthirsty Germans and rotten imperialist Canadian pigs?"
 plcommon.38.a:0 "YES!"
@@ -534,6 +534,9 @@ plcommon.77.b:0 "They called our bluff..."
 plcommon.78.t:0 "The PLC Backs Down"
 plcommon.78.d:0 "After the Polish-Lithuanian Commonwealth so proudly declared their intention to leave the Mitteleuropa alliance, they have given in to our demands, and reversed their decision. The Commonwealth government quietly released a missive today stating the previous declaration was "a clerical mistake" and the idea that the Commonwealth would leave Mitteleuropa "simply untrue"."
 plcommon.78.a:0 "They learned their place."
+plcommon.79.t:0 "Selecting a Prime Minister"
+plcommon.79.d:0 "One of the first actions the new Polish-Lithuanian Commonwealth must take is to elect a Prime Minister to lead the government under our king, Mendog III. However, in the excitement of forming a new nation and the political chaos it entails, there have been many calls to allow the people to vote on the Prime Minister, rather than having him appointed. \n\nWhile we are certainly under no obligation to allow the people to vote, it could cement Mendog's position as a "King of the People"..."
+plcommon.79.a:0 "Mendog's vote is the only one we need."
 
 ### Parties ###
 PLC_totalist_party:0 "Free Worker's Party"
@@ -569,3 +572,6 @@ PLC_chose_alone:0 "The Commonwealth leaves Mitteleuropa"
 PLC_chose_syndicalist:0 "The Commonwealth has Embraced Syndicalism"
 PLC_capital_bunker:0 "will receive fortifications in the capital.\n"
 PLC_select_capital:0 "A New Capital must first be selected before it can be improved.\n"
+PLC_nationalists_overthrow_monarchy:0 "§RThe Nationalists seize control!§! \n"
+PLC_syndicalists_overthrow_monarchy:0 "§RThe Syndicalists seize control!§! \n"
+COM_DEMOCRACY:0 "The Commonwealth allows the people to vote"
