--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -4743,15 +4743,15 @@ PIR_national_populist:0 "Riograndense Republic"
 PIR_national_populist_ADJ:0 "Riograndense"
 PIR_national_populist_DEF:0 "The Riograndense Republic"
 
-PLC_totalist:0 "Polish-Lithuanian Commonwealth"
+PLC_totalist:0 "Polish-Lithuanian Commune"
 PLC_totalist_ADJ:0 "Polish-Lithuanian"
-PLC_totalist_DEF:0 "The Polish-Lithuanian Commonwealth"
-PLC_syndicalist:0 "Polish-Lithuanian Commonwealth"
+PLC_totalist_DEF:0 "The Polish-Lithuanian Commune"
+PLC_syndicalist:0 "Polish-Lithuanian Commune"
 PLC_syndicalist_ADJ:0 "Polish-Lithuanian"
-PLC_syndicalist_DEF:0 "The Polish-Lithuanian Commonwealth"
-PLC_radical_socialist:0 "Polish-Lithuanian Commonwealth"
+PLC_syndicalist_DEF:0 "The Polish-Lithuanian Commune"
+PLC_radical_socialist:0 "Polish-Lithuanian Commune"
 PLC_radical_socialist_ADJ:0 "Polish-Lithuanian"
-PLC_radical_socialist_DEF:0 "The Polish-Lithuanian Commonwealth"
+PLC_radical_socialist_DEF:0 "The Polish-Lithuanian Commune"
 PLC_social_democrat:0 "Polish-Lithuanian Commonwealth"
 PLC_social_democrat_ADJ:0 "Polish-Lithuanian"
 PLC_social_democrat_DEF:0 "The Polish-Lithuanian Commonwealth"
