There ya go, TBW, far right Colombians freshly brewed to your taste

--- a/localisation/KR_Ministers_l_english.yml
+++ b/localisation/KR_Ministers_l_english.yml
@@ -8183,6 +8183,8 @@
 	 Ruben_Piedrahita_Arango_dead:0 " is incapable of holding this post."
 	 COL_Julio_Valdez_hog_pau:0 "Julio Valdez"
 	 Julio_Valdez_dead:0 " is incapable of holding this post."
+	 COL_Gilberto_Alzate_Avendano_hog_npo:0 "Gilberto Alzate Avendaño"
+	 Gilberto_Alzate_Avendano_dead:0 " is incapable of holding this post."
 
 	### Foreign Minister ###
 	 COL_Alberto_Lleras_Camargo_for_sde:0 "Alberto Lleras Camargo"
@@ -8217,6 +8219,8 @@
 	 Eduardo_Porier_Escobar_dead:0 " is incapable of holding this post."
 	 COL_Meliton_Rodriguez_Roldan_for_pau:0 "Melitón Rodriguez Roldan"
 	 Meliton_Rodriguez_Roldan_dead:0 " is incapable of holding this post."
+	 COL_Silvio_Villegas_for_npo:0 "Silvio Villegas"
+	 Silvio_Villegas_dead:0 " is incapable of holding this post."
 
 	### Economy Minister ###
 	 COL_Carlos_Lozano_y_Lozano_eco_rso:0 "Carlos Lozano y Lozano"
@@ -8261,6 +8265,8 @@
 	 Julio_Valdez_dead:0 " is incapable of holding this post."
 	 COL_Antonio_Acevedo_Escobar_eco_pau:0 "Antonio Acevedo Escobar"
 	 Antonio_Acevedo_Escobar_dead:0 " is incapable of holding this post."
+	 COL_Jose_Camacho_Carreno_eco_npo:0 "José Camacho Carreño"
+	 Jose_Camacho_Carreno_dead:0 " is incapable of holding this post."
 
 	### Security Minister ###
 	 COL_Dario_Echandia_sec_rso:0 "Darío Echandía"
@@ -8299,6 +8305,8 @@
 	 ME_Rojas_de_Moreno_dead:0 " is incapable of holding this post."
 	 COL_Meliton_Rodriguez_Roldan_sec_pau:0 "Melitón Rodriguez Roldan"
 	 Meliton_Rodriguez_Roldan_dead:0 " is incapable of holding this post."
+	 COL_Augusto_Ramirez_Moreno_sec_npo:0 "Augusto Ramirez Moreno"
+	 Augusto_Ramirez_Moreno_dead:0 " is incapable of holding this post."
 
 	### Intelligence Minister ###
 	 COL_Querista_Sellor_int_tot:0 "Querista Sellor"
@@ -8329,6 +8337,8 @@
 	 Meliton_Rodriguez_Roldan_dead:0 " is incapable of holding this post."
 	 COL_Jose_Ellis_Quinsado_int_pau:0 "José Ellis Quinsado"
 	 Jose_Ellis_Quinsado_dead:0 " is incapable of holding this post."
+	 COL_Joaquin_Fidalgo_Hermida_int_npo:0 "Joaquin Fidalgo Hermida"
+	 Joaquin_Fidalgo_Hermida_dead:0 " is incapable of holding this post."
 
 	### Military High Command ###
 	 COL_Luis_Bernardo_Andrade_mhc_tot:0 "Luis Bernardo Andrade"
@@ -16697,7 +16707,7 @@
 	 Johan_Albarda_dead:0 " is incapable of holding this post."
 	 HOL_Willem_Drees_hog_sde:0 "Willem Drees"
 	 Willem_Drees_dead:0 " is incapable of holding this post."
-	 HOL_Hendricus_Colijn_hog_mli:0 "Hendricus Colijn"
+	 HOL_Hendricus_Colijn_hog_sco:0 "Hendricus Colijn"
 	 Hendricus_Colijn_dead:0 " is incapable of holding this post."
 	 HOL_Louis_Beel_hog_mli:0 "Louis Beel"
 	 Louis_Beel_dead:0 " is incapable of holding this post."
@@ -16743,7 +16753,7 @@
 	 Dirk_U_Stikker_dead:0 " is incapable of holding this post."
 	 HOL_Jan_Willem_Beyen_for_sli:0 "Jan Willem Beyen"
 	 Jan_Willem_Beyen_dead:0 " is incapable of holding this post."
-	 HOL_Hendricus_Colijn_for_mli:0 "Hendricus Colijn"
+	 HOL_Hendricus_Colijn_for_sco:0 "Hendricus Colijn"
 	 Hendricus_Colijn_dead:0 " is incapable of holding this post."
 	 HOL_Jacobus_Patijn_for_mli:0 "Jacobus Patijn"
 	 Jacobus_Patijn_dead:0 " is incapable of holding this post."
@@ -16801,7 +16811,7 @@
 	 Johannes_Meynen_dead:0 " is incapable of holding this post."
 	 HOL_O_van_Lidth_de_Jeude_eco_mli:0 "O. van Lidth de Jeude"
 	 O_van_Lidth_de_Jeude_dead:0 " is incapable of holding this post."
-	 HOL_Pieter_Oud_eco_mli:0 "Pieter Oud"
+	 HOL_Pieter_Oud_eco_sli:0 "Pieter Oud"
 	 Pieter_Oud_dead:0 " is incapable of holding this post."
 	 HOL_Tietse_Pieter_Sevensma_eco_mli:0 "Tietse Pieter Sevensma"
 	 Tietse_Pieter_Sevensma_dead:0 " is incapable of holding this post."
