Forgot to add two ideas

--- a/localisation/KR_Ireland_l_english.yml
+++ b/localisation/KR_Ireland_l_english.yml
@@ -1110,6 +1110,8 @@ IRE_FIGHTING_IRISH:0 "The Fighting Irish"
 IRE_OFFICER_SCHOOL:0 "Officer School"
 IRE_BLUESHIRTS:0 "The Army Comrades Association"
 IRE_BLUEBLOUSES:0 "The Blueblouses"
+IRE_ICA:0 "The Irish Citizen Army"
+IRE_CNM:0 "Female Soldiers"
 IRE_LAST_STAND:0 "Come Woe or Weal"
 
 # Military Events
