1st batch of greek changes

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -2460,25 +2460,25 @@ GRE_radical_socialist_ADJ:0 "Socialist-Hellenic"
 GRE_radical_socialist_DEF:0 "The Hellenic Socialist Republic"
 GRE_social_democrat:0 "Hellenic Republic"
 GRE_social_democrat_ADJ:0 "Hellenic"
-GRE_social_democrat_DEF:0 "The Hellenic Republic"
-GRE_social_liberal:0 "Greece"
-GRE_social_liberal_ADJ:0 "Greek"
-GRE_social_liberal_DEF:0 "Greece"
+GRE_social_democrat_DEF:0 "The 2nd Hellenic Republic"
+GRE_social_liberal:0 "Hellenic Republic"
+GRE_social_liberal_ADJ:0 "Hellenic"
+GRE_social_liberal_DEF:0 "The 2nd Hellenic Republic"
 GRE_market_liberal:0 "Greece"
-GRE_market_liberal_ADJ:0 "Greek"
+GRE_market_liberal_ADJ:0 "Hellenic"
 GRE_market_liberal_DEF:0 "Greece"
-GRE_social_conservative:0 "Hellenic Republic"
+GRE_social_conservative:0 "Kingdom of Greece"
 GRE_social_conservative_ADJ:0 "Hellenic"
-GRE_social_conservative_DEF:0 "The Hellenic Republic"
+GRE_social_conservative_DEF:0 "The Kingdom of Greece"
 GRE_authoritarian_democrat:0 "Kingdom of Greece"
-GRE_authoritarian_democrat_ADJ:0 "Greek"
+GRE_authoritarian_democrat_ADJ:0 "Hellenic"
 GRE_authoritarian_democrat_DEF:0 "The Kingdom of Greece"
-GRE_paternal_autocrat:0 "Kingdom of Greece"
-GRE_paternal_autocrat_ADJ:0 "Greek"
+GRE_paternal_autocrat:0 "Greece"
+GRE_paternal_autocrat_ADJ:0 "Hellenic"
 GRE_paternal_autocrat_DEF:0 "The Kingdom of Greece"
-GRE_national_populist:0 "Kingdom of Greece"
-GRE_national_populist_ADJ:0 "Greek"
-GRE_national_populist_DEF:0 "The Kingdom of Greece"
+GRE_national_populist:0 "Greek Legionary State"
+GRE_national_populist_ADJ:0 "Hellenic"
+GRE_national_populist_DEF:0 "The Legionary State of Greece"
 
 GRU_totalist:0 "German Socialist Republic"
 GRU_totalist_ADJ:0 "German"
