--- a/localisation/KR_Victory_Points_l_english.yml
+++ b/localisation/KR_Victory_Points_l_english.yml
@@ -42,6 +42,7 @@ VICTORY_POINTS_788:0 "Norfolk"
 VICTORY_POINTS_792:0 "Beyrut"
 VICTORY_POINTS_819:0 "Napoli"
 VICTORY_POINTS_853:0 "Phoenix"
+VICTORY_POINTS_863:0 "Larissa"
 VICTORY_POINTS_875:0 "Cordoba"
 VICTORY_POINTS_885:0 "Burgos"
 VICTORY_POINTS_911:0 "Toulon"
@@ -51,6 +52,7 @@ VICTORY_POINTS_940:0 "Konya"
 VICTORY_POINTS_947:0 "Bursa"
 VICTORY_POINTS_949:0 "Sofia"
 VICTORY_POINTS_957:0 "Vladivostok"
+VICTORY_POINTS_976:0 "Lamia"
 VICTORY_POINTS_1005:0 "Antalya"
 VICTORY_POINTS_1025:0 "Kokura"
 VICTORY_POINTS_1047:0 "Guangzhou"
@@ -194,6 +196,7 @@ VICTORY_POINTS_3924:0 "Split"
 VICTORY_POINTS_3938:0 "Madrid"
 VICTORY_POINTS_3957:0 "Washington"
 VICTORY_POINTS_3960:0 "Dallas"
+VICTORY_POINTS_3980:0 "Florina"
 VICTORY_POINTS_3992:0 "Nanchang"
 VICTORY_POINTS_3995:0 "Saipan"
 VICTORY_POINTS_3999:0 "Hakha"
@@ -363,6 +366,7 @@ VICTORY_POINTS_7186:0 "Taihoku" #Taipei
 VICTORY_POINTS_7191:0 "Hangzhou"
 VICTORY_POINTS_7197:0 "Kochi"
 VICTORY_POINTS_7202:0 "Charleston"
+VICTORY_POINTS_7211:0 "Patra"
 VICTORY_POINTS_7222:0 "Hefei"
 VICTORY_POINTS_7236:0 "Hat Yai"
 VICTORY_POINTS_7251:0 "Rabaul"
@@ -628,6 +632,7 @@ VICTORY_POINTS_11932:0 "Naha"
 VICTORY_POINTS_11936:0 "Thanh Hoa"
 VICTORY_POINTS_11954:0 "Benghazi"
 VICTORY_POINTS_11969:0 "Tunis"
+VICTORY_POINTS_12001:0 "Arta"
 VICTORY_POINTS_12003:0 "Valletta" #Malta
 VICTORY_POINTS_12068:0 "Takao" #Gaoxiong/KaohsiungTakao/Takow
 VICTORY_POINTS_12080:0 "Indore"
