Fengtian tree work

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -14,6 +14,8 @@ FNG_Unscrupulous_Governance:0 "Unscrupulous Governance"
 FNG_Investment_Dearth:0 "Investment Dearth"
 FNG_Land_Reform_Underway:0 "Land Reform Underway"
 FNG_Japanese_Aid_Cut:0 "Japanese Aid Cut"
+FNG_Buying_Silver:0 "Buying Silver"
+FNG_Central_Bank_Collapse:0 "Central Bank Collapse"
 
 ### Informal Empire Mechanic ###
 FNG_informal_empire_1:0 "Expel the Japanese Bandits!"
@@ -693,26 +695,31 @@ fengtian.new.68.d:0 "In light of Japan's recent breakthroughs in decryption, sci
 fengtian.new.68.a:0 "Excellent"
 
 fengtian.new.69.t:0 "The Jinzhou Industrial Zone"
-fengtian.new.69.d:0 "INSERT"
+fengtian.new.69.d:0 "Jinzhou's convenient location makes it excellent for a proposed Industrial Zone, and several groups have already begun jockeying for a dominant position in development; most notably a Mantetsu subsiduary specializing in canning and light metal work, the Communications Clique who want to establish a rolling stock factory, and the military which insists that the zone must be used for munitions manufacture ahead of 'personal capitalistic gains'. The situation is made somewhat unusual by the Communications Clique, who are usually able to front quite a bit of money, and rumors suggest that several members are under pressure from the military to weaken their own bidding position."
 fengtian.new.69.a:0 "Choose Mantetsu"
 fengtian.new.69.b:0 "Choose the Communications Clique"
 fengtian.new.69.c:0 "Choose the Zhang Clique"
 
-fengtian.new.70.t:0 ""
-fengtian.new.70.d:0 ""
-fengtian.new.70.a:0 ""
+fengtian.new.70.t:0 "Filling the Silver Reserve"
+fengtian.new.70.d:0 "A full silver reserve is crucial to building confidence in Fengtian's currency, and even more crucial to attracting foreign investment, without which Fengtian can never hope to match the Qing to the south who have been, for the past eight years, flush with German capital. However, silver is an expensive commodity, and paying for enough to fill the reserve fully would undoubtedly cut funding from other areas. Some ministers have confidentally suggested only buying about half of the desired quantity, as many suggested was the case prior to the civil wars, but those rumors were never confirmed despite the significant economic recession that followed the government's inability to settle its war debts. \n\n Filling the reserve inadequately would certainly be a big risk, but perhaps a worthwhile one."
+fengtian.new.70.a:0 "Fill the reserve"
+fengtian.new.70.b:0 "No risk no reward"
 
-fengtian.new.71.t:0 ""
-fengtian.new.71.d:0 ""
-fengtian.new.71.a:0 ""
+fengtian.new.71.t:0 "Economic Disaster!"
+fengtian.new.71.d:0 "After the Bank of Japan and Mitsui Bank, major lenders to our own government, unexpectedly called for outstanding debts to be paid, our Central Bank suddenly found itself unable to provide sufficient silver for the transaction. News of the situation quickly leaked to the public provoking a run on the banks,and widespread financial panic. Rumor suggests that the crisis is not a product of gross mismanagement and incompetence on behalf of the government, which would suprise few in Fengtian, but rather a deliberate move to deceive the public. Mantetsu's offices in Mukden and Harbin have already begun a full scale investigation, and unless action is taken they seem likely to discover a very incriminating paper trail. \n\n While there are several options available, it would be unfortunate if certain government files inexplicably went missing..."
+fengtian.new.71.a:0 "Burn the evidence!"
+fengtian.new.71.b:0 "Burn it and blame the Japanese!"
+fengtian.new.71.c:0 "Ask Japan for a bailout!"
+fengtian.new.71.d:0 "We must come clean!"
 
-fengtian.new.72.t:0 ""
-fengtian.new.72.d:0 ""
-fengtian.new.72.a:0 ""
+fengtian.new.72.t:0 "Banking Evidence Discovered!"
+fengtian.new.72.d:0 "After a thorough investigation involving untold bribes and threats, Mantetsu investigators have concluded that our government intentionally deceived its people, and is entirely to blame for the recent financial disaster. We are in no position to refuse their calls for the arrests of several involved ministers, but conveniently the Grand Marshal and his closest advisors have been spared direct blame, and Mantetsu's Director Yosuke Matsuoka has suggested that in return for political favours, the entire matter could be shelved indefinitely."
+fengtian.new.72.a:0 "Accept the offer"
+fengtian.new.72.b:0 "Refuse the offer"
 
-fengtian.new.73.t:0 ""
-fengtian.new.73.d:0 ""
-fengtian.new.73.a:0 ""
+fengtian.new.73.t:0 "The State of the Officer Corps"
+fengtian.new.73.d:0 "INSERT"
+fengtian.new.73.a:0 "Unfortunate"
 
 fengtian.new.74.t:0 ""
 fengtian.new.74.d:0 ""
