Nice one Zankoas

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -272,8 +272,7 @@ worldnews.37.d:0 "A country was reborn in the Balkans after the Weltkrieg, Great
 worldnews.37.a:0 "I thought it was the Third? The Balkans are a true powder keg."
 worldnews.37.b:0 "Bulgaria will fall and its unjustly seized lands will be returned!"
 worldnews.37.c:0 "Greater Bulgaria will be preserved, and the Belgrade Pact states will be smashed!"
-worldnews.37.d:0 "The post-Weltkrieg Balkans could never be sustainable. This was inevitable."
-worldnews.37.e:0 "We cannot intervene again. Bulgaria is on its own."
+worldnews.37.e:0 "The post-Weltkrieg Balkans could never be sustainable. This was inevitable."
 worldnews.37.f:0 "We cannot intervene again. Bulgaria is on its own."
 
 worldnews.38.t:0 "The End of the American Civil War"
