Germany can now join the Entente when it's in Africa

--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -941,6 +941,65 @@ gerfor.65.t:0 "Norway does not agree to lease Trondheim"
 gerfor.65.d:0 "The Norwegian government has decided to not agree to our offer of leasing Trondheim for the next 25 years, citing the threat of British retaliation. While understandable and not unexpected, this is still unfortunate."
 gerfor.65.a:0 "Kiel will have to be good enough."
 
+gerfor.66.t:0 "Deal with the Devil?"
+gerfor.66.d:0 "We have been defeated by the Syndicalist bastards but the Entente still fights on. While it was the inability of their governments to hold on to their lands that led to this whole mess many say that we should put aside our differences and join with the Entente to reclaim our homeland!"
+gerfor.66.a:0 "Join with the Entente."
+gerfor.66.b:0 "No, we will fight alone!"
+
+gerfor.67.t:0 "Germany wants to talk!"
+gerfor.67.d:0 "The Germans have been defeated by the Syndicalist usurpers. While it was their fault that the Syndicalists have taken control of Europe they are now in the same position as we are. Surprisingly, the Germans have sent a delegate to Ottawa asking for an alliance. What will be our terms?"
+gerfor.67.a:0 "Allow them into the Entente without concessions."
+gerfor.67.b:0 "Allow them into the Entente with concessions."
+gerfor.67.c:0 "We will regain our homeland without the German swines!"
+
+gerfor.68.t:0 "Germany wants to talk!"
+gerfor.68.d:0 "The Germans have been defeated by the Syndicalist usurpers. While it was their fault that the Syndicalists have taken over Europe they are now in the same position as we are. Surprisingly, the Germans have sent a delegate to Ottawa asking for an alliance which the Canadians have accepted. Should we demand anything from the Germans in exchange for the alliance?"
+gerfor.68.a:0 "Demand Alsace-Lorraine!"
+gerfor.68.b:0 "Demand Alsace-Lorraine and part of their colonies!"
+gerfor.68.c:0 "Demand nothing from the Germans."
+
+gerfor.69.t:0 "The Entente has accepted"
+gerfor.69.d:0 "The Entente has accepted our alliance proposal and they haven't requested anything in return! This is the best offer we could hope for!"
+gerfor.69.a:0 "Sign the treaty!"
+gerfor.69.b:0 "No, we've changed our minds."
+
+gerfor.70.t:0 "The Entente has accepted"
+gerfor.70.d:0 "The Entente has accepted our alliance proposal! Canada, however, has requested that in return we must enter negotiations regarding our claims on former British colonies which we took after the war. Should we still sign the treaty?"
+gerfor.70.a:0 "Sign the treaty!"
+gerfor.70.b:0 "No, the price is too high."
+
+gerfor.71.t:0 "The Entente has accepted"
+gerfor.71.d:0 "The Entente has accepted our alliance proposal! While Canada has requested nothing in return, France has demanded that we give them Alsace-Lorraine after the war. Should we still sign the treaty?"
+gerfor.71.a:0 "Sign the treaty!"
+gerfor.71.b:0 "No, the price is too high."
+
+gerfor.72.t:0 "The Entente has accepted"
+gerfor.72.d:0 "The Entente has accepted our alliance proposal, but both the French and British governments in exile have requested something in return. Canada has requested we enter negotiations regarding our claims on former British colonies which we took after the war and France has demanded Alsace-Lorraine. Should we still sign the treaty?"
+gerfor.72.a:0 "Sign the treaty!"
+gerfor.72.b:0 "No, the price is too high."
+
+gerfor.73.t:0 "The Entente has accepted"
+gerfor.73.d:0 "We have been defeated by the Syndicalist bastards but the Entente still fights on. While it was the inability of their governments to hold onto their lands that led to this whole mess many say we should put aside our differences and join with the Entente to reclaim our homeland!"
+gerfor.73.a:0 "Sign the treaty!"
+gerfor.73.b:0 "No, the price is too high."
+
+gerfor.74.t:0 "The Entente has accepted"
+gerfor.74.d:0 "The Entente has accepted our alliance proposal, but both the French and British governments in exile have requested that we enter negotiations regarding our claims on former French and British colonies after the war in addition to renouncing our claim on Alsace-Lorraine. Should we still sign the treaty?"
+gerfor.74.a:0 "Sign the treaty!"
+gerfor.74.b:0 "No, the price is too high."
+
+gerfor.75.t:0 "The Entente has refused"
+gerfor.75.d:0 "The Canadians have refused our offer to ally with them. They blame us for this whole mess and claim that they don't need any help to defeat the Syndicalists!"
+gerfor.75.a:0 "Verdammt!"
+
+gerfor.76.t:0 "Enlargement of the Entente"
+gerfor.76.d:0 "The former members of the Mitteleuropa alliance have followed the example of the German Empire and they are now members of our alliance."
+gerfor.76.a:0 "Great!"
+
+gerfor.77.t:0 "The end of Mitteleuropa"
+gerfor.77.d:0 "With the German Empire uniting Mitteleuropa with the Entente to save the world from the Syndicalist threat it is time to follow suit or we will be conquered."
+gerfor.77.a:0 "Sign the treaty!"
+
 ### Flavour Events ###
 
 gerdom.101.t:0 "The Great Crusade"
