Fixing Ceylon Kaiserbund flags error

--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -2000,7 +2000,15 @@ ZIM_GER_subject_DEF:0 "Rhodesia"
 
 YEM_GER_subject:0 "Yemen"
 YEM_GER_subject_ADJ:0 "Yemeni"
-YEM_GER_subject_DEF:0 "Yemen
+YEM_GER_subject_DEF:0 "Yemen"
+
+CEY_GER_subject:0 "Freistaat Ceylon"
+CEY_GER_subject_ADJ:0 "Ceylonese"
+CEY_GER_subject_DEF:0 "Freistaat Ceylon"
+
+SIE_GER_subject:0 "Freistaat Sierra Leone"
+SIE_GER_subject_ADJ:0 "Sierra Leonean"
+SIE_GER_subject_DEF:0 "Freistaat Sierra Leone"
 
 ##############
 #Vanilla
