Fengtian Silver Crisis added

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -511,6 +511,7 @@ fengtian.new.21.a:0 "What a pity"
 fengtian.new.22.t:0 "Imperial Fury"
 fengtian.new.22.d_influence_low:0 "Incensed by the decreasing power of their political proxy in the Assembly, the Japanese government today issued a statement declaring an end to various Fengtian aid programs, including sectors such as research, industrial development, agricultural development, and military armament. The aid should return in some time, as the Japanese cannot afford to let us grow too weak, but until then many functions of our state are crippled."
 fengtian.new.22.d_fengtian_refuses_food:0 "Incensed by what they see as impertinence, the Japanese government today issued a statement declaring an end to various Fengtian aid programs, including sectors such as research, industrial development, agricultural development, and military armament. The aid should return in some time, as the Japanese cannot afford to let us grow too weak, but until then many functions of our state are crippled."
+fengtian.new.22.d_fengtian_blames_japan:0 "Incensed by our 'grave insolence', the Japanese government today issued a statement declaring an end to various Fengtian aid programs, including sectors such as research, industrial development, agricultural development, and military armament. The aid should return in some time, as the Japanese cannot afford to let us grow too weak, but until then many functions of our state are crippled.
 fengtian.new.22.a:0 "A hard lesson"
 fengtian.new.22.b:0 "A perfect time to strike!"
 fengtian.new.23.t:0 "Japanese Aid Returns"
@@ -717,21 +718,21 @@ fengtian.new.72.d:0 "After a thorough investigation involving untold bribes and 
 fengtian.new.72.a:0 "Accept the offer"
 fengtian.new.72.b:0 "Refuse the offer"
 
-fengtian.new.73.t:0 "The State of the Officer Corps"
-fengtian.new.73.d:0 "INSERT"
-fengtian.new.73.a:0 "Unfortunate"
+fengtian.new.73.t:0 "Japan Agrees to the Bailout"
+fengtian.new.73.d:0 "In a move that will surely save our economy, Japan has agreed to pay for sufficient silver to fill our reserve, and will not look further into the matter. Of course, this was likely inspired by little more than self interest, but some say that Japan may not be so bad after all..."
+fengtian.new.73.a:0 "We are saved!"
 
-fengtian.new.74.t:0 ""
-fengtian.new.74.d:0 ""
-fengtian.new.74.a:0 ""
+fengtian.new.74.t:0 "Japan Refuses the Bailout"
+fengtian.new.74.d:0 "Despite our pleas, Japan has refused a bailout, leaving us in the same economic position we were before we made the request and with ample humiliation to boot. The only silver lining is that many citizens, even including some employees of Mantetsu, have lost a great deal of faith in Japan's benevolent position toward China."
+fengtian.new.74.a:0 "If only that was more than a metaphor"
 
 fengtian.new.75.t:0 ""
 fengtian.new.75.d:0 ""
 fengtian.new.75.a:0 ""
 
-fengtian.new.76.t:0 ""
+fengtian.new.76.t:0 "The State of the Officer Corps"
 fengtian.new.76.d:0 ""
-fengtian.new.76.a:0 ""
+fengtian.new.76.a:0 "Unfortunate"
 
 fengtian.new.77.t:0 ""
 fengtian.new.77.d:0 ""
