--- a/localisation/KR_Japan_Foreign_l_english.yml
+++ b/localisation/KR_Japan_Foreign_l_english.yml
@@ -12,6 +12,8 @@ KOR_expell_japs:0 "Expelled Settlers"
 KOR_expell_japs_desc:0 "Ever since the Japanese imperialists have ravaged our homeland in 1910 tens of thousands of Japanese settlers have colonised our home. While most of them left after the war, some stubborn pigs remained, and we have decided to expel them."
 KOR_integrate_japs:0 "Integrated Japanese Settlers"
 KOR_integrate_japs_desc:0 "We have decided to integrate Japanese settlers to our fragile economy."
+JAP_fengtian_bailout:0 "Fengtian Bailout"
+JAP_fengtian_bailout_desc:0 "We are bailing out the Fengtian Government by purchasing sufficient silver to fill their reserve."
 
 ### Foci ###
 JAP_demand_indonesia:0 "Demand Indonesia!"
@@ -866,6 +868,15 @@ japfor.199.d:0 "The Japanese defeated both our colonial garrison and the Indones
 japfor.200.t:0 "The Germans beg for peace!"
 japfor.200.d:0 "Overwhelmed by our superior army the Germans come to us begging for peace. They offer us the entirety of Indonesia and some of their own colonies in return. How should we respond?"
 
+japfor.202.t:0 "The Fengtian Silver Crisis"
+japfor.202.d:0 "When the Bank of Japan and Mitsui Bank, two of the largest in our country, requested payment on their loans in quick succession, Fengtian's Central Bank defaulted due to a sudden and supposedly inexplicably insufficient silver reserve. Whether this was merely gross incompetence and mismanagement, or something more sinister, is unclear, but there is little doubt that the Fengtian Government finds itself in a dire economic situation and has requested our help. \n\n While our influence will ensure that both Mitsui and the Bank of Japan are paid what they are due before anything else, a failing Fengtian Government would severely upset their claims to legitimacy and our claims to benevolence. We have the option of bailing them out."
+japfor.202.a:0 "We have no choice"
+japfor.202.b:0 "This is of their own making"
+
+japfor.203.t:0 "Fengtian Blames us for the Silver Crisis!"
+japfor.203.d:0 "Fengtian has loudly denounced Japan, citing what they say is a deliberate plot to destabilize their government through the eruption of their recent Silver Crisis, citing the incidental requests from both the Bank of Japan and Mitsui Bank for repayment on loans backed by Fengtian's silver reserve. With the reserve apparently containing far less than the Fengtian government claimed, its economy has spiraled out of control as the government loses credibility by the hour, and it seems likely that this crass and foolish attempt to deflect blame is mostly a reaction to their internal political situation. \n\n All the same, we can deny these ridiculous assertions, but can we also let this grave insolence go unpunished?"
+japfor.203.c:0 "False accusations!"
+japfor.203.b:0 "Punish this insolence!"
 ### Opinion Modifiers ###
 mon_demanded_states:0 "Demanded Territories"
 RUS_JAP_ally_1:0 "Agreed to Alliance"
