More options for Japan to deal with anti-Kolchak coup

--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -309,7 +309,7 @@ tram.68.a:0 "Submit before Japan."
 tram.68.b:0 "Never!"
 
 tram.80.t:0 "Anti-Kolchak Coup"
-tram.80.d:0 "The opposition have started an open revolt against us. Disloyal generals and soldiers, leading by Sergei Wojciechowski, have captured the most important neighbourhoods and now marching right to us. Those divisions which are loyal to admiral Kolchak are ready to fight with domestic enemies."
+tram.80.d:0 "The opposition have started an open revolt against us. Disloyal generals and soldiers, leading by Sergei Wojciechowski, have captured the most important neighbourhoods and now marching right to us. Those who are still loyal to admiral Kolchak are ready to fight with these filthy traitors."
 tram.80.a:0 "Kolchak's guards have managed to defeat the rebels"
 tram.80.b:0 "Kolchak was overthrown"
 
@@ -326,7 +326,9 @@ tram.84.b:0 "Congratulate the new government!"
 tram.85.t:0 "The Japanese are trying to destroy our republic!"
 tram.85.d:0 "The Japanese feel threatened by the sudden restoration of democracy in Transamur and they have issued an ultimatum to us in which they demand the restoration of a military cabinet."
 tram.85.a:0 "Submit before Japan."
-tram.85.b:0 "Never!"
+tram.85.b:0 "Submit before Japan."
+tram.85.c:0 "Submit before Japan."
+tram.85.e:0 "Never!"
 
 tram.86.t:0 "The Duma Elections"
 tram.86.d:0 "After several months of preparations the provisional government has completed the arrangements for the first free election in Transamur since 1920. There are 90 seats in national assembly available and various political parties have begun their campaigns. Currently only three parties have a chance of gaining a majority, thus forming a new government. Which one shall prevail?"
@@ -343,12 +345,13 @@ tram.87.c:0 "The The Zemski Krai Party!"
 tram.87.e:0 "The army shall put an end to this chaotic democracy!"
 
 tram.90.t:0 "Yui Mitsuei dies"
-tram.90.d:0 "Today, our colonial governor, general Yui Mitsuei died in age of 79. These damned Japanese rats in Vladivostok Duma have already started a referendum to integrate in Japan and become a new prefecture of the glorious empire. "
+tram.90.d:0 "Today, our colonial governor, general Yui Mitsuei died in age of 79. These damned Japanese rats in Vladivostok Duma have already started a referendum to integrate our country into Japan and become a new prefecture of the glorious empire. However, their words are nothing but words. Everything depends on what Japan will decide to do with us."
 tram.90.a:0 "Does it mean we are no longer independent?"
 
 tram.91.t:0 "Yui Mitsuei dies"
 tram.91.d:0 "Today, our governor in Transamur, general Yui Mitsuei died in age of 79. Pro-Japanese politicians in Vladivostok Duma have decided to become a new prefecture of our empire. Shall we accept their deal?"
-tram.91.a:0 "Indeed"
+tram.91.a:0 "Indeed, integrate them"
+tram.91.a:0 "This is too costly for us. Transamur will stay our puppet under the dictatorship of Grigory Semyonov"
 
 tram.92.t:0 "Find support from Russia?"
 tram.92.d:0 "No doubt, we have no chance to win that war. Maybe, it's time for us to forget about our pride and join Russia? In cooperation with Russian government we have a chance to resolve this war peacefully."
@@ -372,6 +375,33 @@ tram.95.a:0 "Damn"
 tram.96.t:0 "Disaster"
 tram.96.d:0 "So-called "Soviet Government" have refused to return our lands. Moreover, they have declared war on us and eager to retake Vladivostok."
 tram.96.a:0 "Damn!"
+
+tram.97.t:0 "Russian Republic breaks away!"
+tram.97.d:0 "The Russian Republic has decided to leave our sphere of influence and cease all contacts with us!"
+tram.97.a:0 "Destroy them!"
+tram.97.b:0 "We can only let them go..."
+
+tram.98.t:0 "Attempted coup in Transamur"
+tram.98.d:0 "News about anti-Kolchak coup in Transamur have recently reached us. The rebels tried to kill Alexandr Kolchak, our puppet-governor of Vladivostok, but all their best efforts gave nothing. The coup has been crushed by loyal guards. However, Kolchak still have many haters and political situation is very unclear. Maybe, we should order Kolckak to resign and assing new leader for Transamur?"
+tram.98.a:0 "We shall put general Wojciechowski, convinced expansionalist, but not so ambitious, as Kolchak."
+tram.98.b:0 "Grigory Semyonov, the former leader of Transamur, should pacify the region."
+tram.98.c:0 "We can colonise these lands by fellow Japanese people. Appoint old general Mitsue as colonial governor."
+tram.98.e:0 "Kolchak is the best choice for us"
+
+tram.99.t:0 "The Japanese are trying to remove Admiral Kolchak!"
+tram.99.d:0 "The Japanese believe Kolchak has outlived his usefulness and have approached the elite of Transamur with the plan of backing a coup d'etat to replace him with a more pliant council of business and military leaders."
+tram.99.a:0 "Yes, Kolchak is mad and should be removed!"
+tram.99.b:0 "Yes, Kolchak is mad and should be removed!"
+tram.99.c:0 "Yes, Kolchak is mad and should be removed!"
+tram.99.e:0 "Kolchak is the Mighty Lord of the East, he stays here!"
+
+tram.100.t:0 "Admiral Kolchak was killed"
+tram.100.d:0 "News about anti-Kolchak coup in Transamur have recently reached us. The rebels have managed to kill Alexandr Kolchak, our puppet-governor of Vladivostok, and general Wojciechowski became new dictator. Although he is less brave and ambitious than his political enemy, Wojciechowski still want to expand Transamur. Maybe, we shall replace him until he start any geopolitical crisis in Asia?"
+tram.100.a:0 "Wojciechowski is the best choice for us"
+
+tram.101.t:0 "The Japanese are trying to remove Wojciechowski!"
+tram.101.d:0 "The Japanese believe Wojciechowski has outlived his usefulness and have approached the elite of Transamur with the plan of backing a coup d'etat to replace him with someone more useful."
+
 
 ### Parties ###
 TRM_totalist_party:0 "FETP"
@@ -491,6 +521,7 @@ TRM_Rep:0 "Democracy Prevails"
 TRM_Rep_Res:0 "Invests in Science"
 TRM_Rep_Fac:0 "Invests in Industry"
 TRM_Rep_Goods:0 "Build Up a Welfare State"
+TRM_Pol_Research:0 "Major Educational Reform"
 TRM_Expand_RCW:0 "Turmoil in Siberia"
 TRM_FE_SIB:0 "Siberia is Vulnerable"
 TRM_FE_RUS:0 "Russia is Vulnerable"
@@ -504,12 +535,13 @@ TRM_Claim_West_Sib:0 "Go West"
 TRM_Integrate_West_Sib:0 "Integrate West Siberia"
 TRM_Cap_Novosibirsk:0 "Move Capital to Novosibirsk"
 TRM_Claim_Russia:0 "Final Solution"
+TRM_Leave_Russia:0 "Leave Japanese Sphere of Influence"
 TRM_Become_Russia:0 "Become Russia"
 
 ### Tooltips ###
 TRM_north_expand:0 "You will receive a huge conscription bonus until you'll return Russian Far East or Siberia."
 TRM_sov:0 "The Reds are too weak to control Russian Far East, this focus will give you the lands with 100% chance."
-TRM_change:0 "The Ultimate goal is reached. You become new Russia and replace the former corrupt government."
+TRM_change:0 "The Ultimate goal since 1925 is reached. You become new Russia and replace the former corrupt government."
 
 ### Flags ###
 TRM_control_FE:0 "Russian Far East is our"	
